[x] User: Fixed word spacing issue in reader https://www.pivotaltracker.com/story/show/131288989

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3287,8 +3287,11 @@ ul.icon-panel li a {
     font-family: work_sansregular;
 }
 
-.verse-text .word-definition:last-child {
-    margin-right: 10px;
+.verse-text b a{
+    margin-left: 10px;
+}
+.verse-text:first-child b a{
+    margin-left: 0;
 }
 .req {
     color: #f90000;
